# PO_telegram_signal_bot

./: .gitignore  README.md  demo_trader.py  install_requirements.ps1  main.py  main_asgi_app.py  parse_data.py  pyproject.toml  requirements.txt  run_scraper.ps1  scraper.py  scraper_debug.py  test.py  trader.py
shared_data/: ssid.txt
